--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meine erste Webseite online</title>
+    <title>Meine erste Webseite online</title>#
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <h1>wilkommen auf meiner webseite</h1>
-    <p></p>
+    <p>Diese Seite ist für alle aufrufbar</p>
+
+    <a href="/kotakt.html">kontakt</a>
 </body>
 </html>
