--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meine erste Webseite online</title>#
+    <title style="color:white">Kira murders main suspects</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>wilkommen auf meiner webseite</h1>
-    <p>Diese Seite ist für alle aufrufbar</p>
+    <h1 style="color: white; height: max-content;">Main suspects for the キラ(Kira) murders</h1>
+    <p></p>
 
     <a href="/kotakt.html">kontakt</a>
+    <a href="/Light.html">suspect 1</a>
+    <a href="/Misa.html">suspect 2</a>
+    <a href="/placeholder.html">suspect 3</a>
 </body>
 </html>
