--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title style="color:white">Kira murders main suspects</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />  
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
 </head>
 <body>
-    <h1 style="color: white; height: max-content;">Main suspects for the キラ(Kira) murders</h1>
+    <h1 style="color: white; height: max-content; background-color: black; text-align: center;position: fixed; ;">Main suspects for the キラ(Kira) murders</h1>
     <p></p>
 
-    <a href="/kotakt.html">kontakt</a>
+
     <a href="/Light.html">suspect 1</a>
     <a href="/Misa.html">suspect 2</a>
-    <a href="/placeholder.html">suspect 3</a>
+    <a href="/Mikami.html">suspect 3</a>
+    <a href="/death_note.html">murder weapon</a>
+    <a href="/contact.html">contact</a>
 </body>
 </html>
