took way to long but FINALLY finished it T-T

--- a/Higuchi.html
+++ b/Higuchi.html
@@ -18,17 +18,17 @@
 
     
     <a href="/index.html"><button class="backbutton">Back</button></a>
-    <h1 style="color: white; font-size: 60px;" class="name-pos">Light Yagami</h1>
+    <h1 style="color: white; font-size: 60px;" class="name-pos">Kyosuke Higuchi</h1>
 
 
 
-    <div class="pic1-pos"><img src="light1.jpg" alt="light-1" width="390px"></div>
+    <div class="pic1-pos"><img src="higuchi1.jpg" alt="higuchi-1" width="390px"></div>
 
 
-    <p style="color:white; font-size: 20px;" class="description">Light Yagami is outwardly the model of a polite, confident, and intelligent young man. However, his perfection feels carefully constructed—too precise<br> to be entirely genuine.
-        <br>He is highly intelligent and he possesses a calm, calculated demeanor that rarely slips. This level of self-control suggests not innocence, but secrecy.<br> Light speaks often about justice, yet his words feel detached, as though he views morality as a puzzle rather than a human concern. 
-        His confidence<br> borders on superiority, and he seems accustomed to being the most capable person in any room. In truth, Light is someone who hides his true intentions behind<br> charm and composure.
-        <br>If he is Kira, he is exceptionally dangerous. If he isn’t, then he is still someone whose ambition and intellect could easily bend the world to his will.</p>
+    <p style="color:white; font-size: 20px;" class="description">Kyosuke Higuchi is a man driven almost entirely by ambition and self-interest. Unlike the more ideological Kiras,<br> he shows no concern for “justice”—only for personal gain. His arrogance is overt, and he carries himself with the entitlement of someone accustomed to power<br> and unaccustomed to consequences.
+    Higuchi is impulsive, reckless, and easily agitated.<br> He lacks emotional restraint and often reveals his intentions through his reactions, making him more transparent than he believes himself to be.<br> Though he is competent in a corporate environment, his decision-making is shortsighted and fueled by ego rather than strategy.<br>
+    His willingness to use lethal power for convenience and career advancement indicates a profound moral vacancy. This, combined with his impatience and<br> susceptibility to pressure, makes him dangerous—but also easier to corner compared to more calculated Kira suspects.<br>
+    In essence, Higuchi is greedy, impulsive, and self-serving: a man who would the Death Note not as a responsibility,<br> but as the ultimate tool for personal advancement.</p>
 
     <table style="margin-top: -492px; margin-left: 625px;">
     <tr>
@@ -63,9 +63,9 @@
     </tr>
     </table>
 
-    <div class="pic2-pos"><img src="light2.jpg" alt="light-2" width="130px"></div>
-    <div class="pic3-pos"><img src="light4.jpg" alt="light-3" width="130px"></div>
-    <div class="pic4-pos"><img src="light3.jpg" alt="light-4" width="130px"></div>
+    <div class="pic2-pos"><img src="higuchi2.jpeg" alt="higuchi-2" width="130px"></div>
+    <div class="pic3-pos"><img src="higuchi4.jpg" alt="higuchi-3" width="130px"></div>
+    <div class="pic4-pos"><img src="higuchi3.jpeg" alt="higuchi-4" width="130px"></div>
 
     <style>
 
@@ -96,19 +96,19 @@
 
         .pic2-pos{
             position: relative;
-            top: 10px;
+            top: -30px;
             left: 90px;
         }
 
         .pic3-pos{
             position: relative;
-            top: -98px;
+            top: -216px;
             left: 230px;
         }
 
         .pic4-pos{
             position: relative;
-            top: -206px;
+            top: -402px;
             left: 370px;
         }
 
