--- a/kiyomi.html
+++ b/kiyomi.html
@@ -18,17 +18,17 @@
 
     
     <a href="/index.html"><button class="backbutton">Back</button></a>
-    <h1 style="color: white; font-size: 60px;" class="name-pos">Light Yagami</h1>
+    <h1 style="color: white; font-size: 60px;" class="name-pos">Kiyomi Takada</h1>
 
 
 
-    <div class="pic1-pos"><img src="light1.jpg" alt="light-1" width="390px"></div>
+    <div class="pic1-pos"><img src="kiyomi1.jpg" alt="light-1" width="390px"></div>
 
 
-    <p style="color:white; font-size: 20px;" class="description">Light Yagami is outwardly the model of a polite, confident, and intelligent young man. However, his perfection feels carefully constructed—too precise<br> to be entirely genuine.
-        <br>He is highly intelligent and he possesses a calm, calculated demeanor that rarely slips. This level of self-control suggests not innocence, but secrecy.<br> Light speaks often about justice, yet his words feel detached, as though he views morality as a puzzle rather than a human concern. 
-        His confidence<br> borders on superiority, and he seems accustomed to being the most capable person in any room. In truth, Light is someone who hides his true intentions behind<br> charm and composure.
-        <br>If he is Kira, he is exceptionally dangerous. If he isn’t, then he is still someone whose ambition and intellect could easily bend the world to his will.</p>
+    <p style="color:white; font-size: 20px;" class="description">Kiyomi Takada presents herself as composed, intelligent, and impeccably refined. She values order, dignity, and social perception, maintaining a calm,<br> polished exterior that rarely cracks.<br> Her confidence is quiet but unmistakable, rooted in a belief that she stands above those around her—morally, intellectually, and socially.<br>
+    Beneath her professionalism lies a strong need for purpose and alignment with a higher ideal. This makes her susceptible to ideology, particularly when it flatters<br> her sense of importance. Her loyalty, once secured, becomes unwavering, not out of emotion but out of conviction and ambition.<br>
+    Takada’s poise makes her difficult to read, but also dangerous: she is deliberate, controlled, and willing to support extreme actions when she believes<br> they serve a righteous cause. She does not see herself as a follower, but as someone destined to stand beside power.<br>
+    In essence, Kiyomi Takada is elegant, disciplined, and ideologically driven—an individual whose calm exterior masks a fervent belief in her own chosen role<br> within a “just” world.</p>
 
     <table style="margin-top: -492px; margin-left: 625px;">
     <tr>
@@ -63,9 +63,9 @@
     </tr>
     </table>
 
-    <div class="pic2-pos"><img src="light2.jpg" alt="light-2" width="130px"></div>
-    <div class="pic3-pos"><img src="light4.jpg" alt="light-3" width="130px"></div>
-    <div class="pic4-pos"><img src="light3.jpg" alt="light-4" width="130px"></div>
+    <div class="pic2-pos"><img src="kiyomi2.jpg" alt="light-2" width="130px"></div>
+    <div class="pic3-pos"><img src="kiyomi4.jpg" alt="light-3" width="130px"></div>
+    <div class="pic4-pos"><img src="kiyomi3.jpg" alt="light-4" width="130px"></div>
 
     <style>
 
@@ -96,19 +96,19 @@
 
         .pic2-pos{
             position: relative;
-            top: 10px;
+            top: -30px;
             left: 90px;
         }
 
         .pic3-pos{
             position: relative;
-            top: -98px;
+            top: -164px;
             left: 230px;
         }
 
         .pic4-pos{
             position: relative;
-            top: -206px;
+            top: -297px;
             left: 370px;
         }
 
